# amplifier-core

./: .env.example  AGENTS.md  Cargo.toml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ffi-nuget.yml  proto-check.yml  rust-core-ci.yml  rust-core-wheels.yml
bindings/dotnet/: Cargo.toml
bindings/dotnet/nuget/: Amplifier.FFI.Runtime.csproj  Amplifier.FFI.Runtime.nuspec  README.md  pack.sh
bindings/dotnet/src/: lib.rs
bindings/node/: package-lock.json
bindings/node/src/: module_resolver.rs
bindings/python/: Cargo.toml
bindings/python/src/: hooks.rs  lib.rs  module_resolver.rs  wasm.rs
context/: release-mandate.md
crates/amplifier-core/: Cargo.toml
crates/amplifier-ffi/: Cargo.toml  cbindgen.toml
docs/: CORE_DEVELOPMENT_PRINCIPLES.md  DESIGN_PHILOSOPHY.md  test_polyglot_section.py
docs/contracts/: TOOL_CONTRACT.md
docs/plans/: 2026-03-17-grpc-adapter-layer1-test-fixtures.md  2026-03-18-v2-adapter-and-c-abi-design.md  2026-03-18-v2-adapter-and-c-abi-implementation.md  2026-03-21-unified-llm-provider-module-design.md  2026-03-22-polyglot-bundle-unified-llm-design.md
include/: amplifier_ffi.h
python/amplifier_core/: _engine.pyi  hooks.py  interfaces.py  loader.py
scripts/: e2e-smoke-test.sh
tests/: test_ci_workflows.py  test_emit_and_collect_returns_dicts.py  test_hooks.py  test_hooks_alias.py  test_interfaces.py  test_loader_find_package_dir.py  test_loader_rust_sidecar_integration.py  test_loader_security_fixes.py  test_loader_transport_dispatch_rust.py  test_pyo3_proto_bridge.py
(+21 files in other folders)
