[package]
name = "amplifier-ffi"
version = "0.1.0"
edition = "2021"
description = "C ABI FFI bridge for amplifier-core (P/Invoke from .NET)"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
amplifier-core = { path = "../../crates/amplifier-core", features = ["wasm"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
log = "0.4"

[dev-dependencies]
